# system_server

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  app.py  backup_server.py  build_docker.sh  cloud-config.yml  database.db  db_updater.py  docker-compose.yml  main.cpp  qtry_utils.py  quottery_cpp_wrapper.py  quottery_rpc_wrapper.py  requirements.txt  test_qtry.py
.github/workflows/: docker-image.yml
docs/: 1.Setup.md  2.Database.md  3.FlaskApp.md
quottery_cpp/: CMakeLists.txt  quottery_cppConfig.cmake.in
quottery_cpp/include/: key_utils_wrapper.h  node_utils_wrapper.h  quottery_wrapper.h
quottery_cpp/src/: key_utils_wrapper.cpp  node_utils_wrapper.cpp  quottery_wrapper.cpp
